--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-testing-library": "^5.3.1",
     "eslint-webpack-plugin": "^3.1.1",
+    "kakao.maps.d.ts": "^0.1.33",
     "postcss-scss": "^4.0.4",
     "prettier": "^2.7.1",
     "sass": "^1.51.0",
