--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["react/next", "react-dom/next"]
+    "types": ["react/next", "react-dom/next", "kakao.maps.d.ts"]
   },
   "include": ["src"]
 }
